--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,8 @@
 # dependencies
 back-end/node_modules
 front-end/node_modules
+file-upload-example/backend/node_modules
+file-upload-example/frontend/node_modules
 /.pnp
 .pnp.js
 
