--- a/back-end/package.json
+++ b/back-end/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
     "express": "^4.16.4",
-    "multer": "^1.4.1"
+    "multer": "^1.4.1",
+    "mv": "^2.1.1"
   }
 }
