--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 
 # dependencies
 back-end/node_modules
+back-end/public
 front-end/node_modules
 file-upload-example/backend/node_modules
 file-upload-example/frontend/node_modules
