--- a/front-end/package.json
+++ b/front-end/package.json
@@ -5,10 +5,13 @@
   "dependencies": {
     "axios": "^0.18.0",
     "node-sass": "^4.11.0",
-    "react-dropzone": "~4.2.12",
     "react": "^16.6.3",
+    "react-dataparcels": "^0.18.2",
+    "react-dataparcels-drag": "^0.18.1",
     "react-dom": "^16.6.3",
-    "react-scripts": "^2.1.3"
+    "react-dropzone": "~4.2.12",
+    "react-scripts": "^2.1.3",
+    "react-sortable-hoc": "^1.7.1"
   },
   "scripts": {
     "start": "react-scripts start",
