--- a/front-end/package.json
+++ b/front-end/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "array-move": "^1.0.0",
     "axios": "^0.18.0",
     "node-sass": "^4.11.0",
     "react": "^16.6.3",
