--- a/front-end/package.json
+++ b/front-end/package.json
@@ -9,6 +9,7 @@
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-dropzone": "~4.2.12",
+    "react-router-dom": "^5.0.0",
     "react-scripts": "^2.1.3",
     "react-sortable-hoc": "^1.7.1"
   },
