--- a/front-end/package.json
+++ b/front-end/package.json
@@ -11,7 +11,8 @@
     "react-dropzone": "~4.2.12",
     "react-router-dom": "^5.0.0",
     "react-scripts": "^2.1.3",
-    "react-sortable-hoc": "^1.7.1"
+    "react-sortable-hoc": "^1.7.1",
+    "sweetalert2": "^8.8.5"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -27,5 +28,6 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "proxy": "http://localhost:8080"
 }
