--- a/back-end/package.json
+++ b/back-end/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
+    "dotenv": "^7.0.0",
     "express": "^4.16.4",
     "jszip": "^3.2.0",
     "multer": "^1.4.1",
-    "mv": "^2.1.1"
+    "mv": "^2.1.1",
+    "nodemailer": "^6.1.0"
   }
 }
