--- a/back-end/package.json
+++ b/back-end/package.json
@@ -17,6 +17,7 @@
     "jszip": "^3.2.0",
     "multer": "^1.4.1",
     "mv": "^2.1.1",
-    "nodemailer": "^6.1.0"
+    "nodemailer": "^6.1.0",
+    "rimraf": "^2.6.3"
   }
 }
